[project]
name = "simula"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pipedsl",
    "pyyaml",
    "openai",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]

[tool.uv.sources]
pipedsl = { path = "/home/ohadr/pipedsl", editable = true }

[dependency-groups]
dev = [
    "pyflakes>=3.4.0",
    "pytest>=9.0.2",
]
